Closed
Bug 54630
Opened 25 years ago
Closed 25 years ago
Disk cache not writing files after 512 files reached
Categories
(Core :: Networking: Cache, defect, P1)
Tracking
()
VERIFIED
FIXED
People
(Reporter: tever, Assigned: neeti)
Details
(Whiteboard: [nsbeta3-][rtm++])
Attachments
(1 file)
938 bytes,
patch
|
Details | Diff | Splinter Review |
Overview Description: After hitting 512 files in the disk cache the cache is
cleaned up ... ie. all cached files are deleted and the files are not stored to
disk anymore. Using about:cache shows the file count (after cleanup) increasing
as it should but does not display the names of the files. All of my cache
directories remain empty and it appears as though nothing is cached anymore.
I've re-installed twice.
Steps to Reproduce:
1.) Surf until you have over 512 records in cache
Actual Results: Cache quits working
Expected Results: cache files should be saved to disk
Build Date & Platform Bug Found: 2000092808 winNT
Additional info: my system's acting a little strange tonight so maybe I'm just
imagining that I'm seeing this
Reporter | ||
Comment 2•25 years ago
|
||
changing platforms to all - checked mac, linux, windows
OS: Windows NT → All
Comment 3•25 years ago
|
||
It's too late for B3 for this, marking nsbeta3-. Sounds like a good thing to fix
for RTM though.
Whiteboard: [nsbeta3-]
When we call DBRecovery(..), only the underlying records in the database are
deleted, but not the nsCachedNetData entries in memory in the replacement
policy. So the number of deleted entries remains high, even though the number of
records have decreased. When the number of undeleted entries reaches 512,
DeleteAtleastOneEntry is called, with target number of records set to 75% of
512=384. But, at this stage, since DBRecovery had been called earlier, the
number of records in the database is less than 384. So the following check is
true,
if (targetNumEntries >= numRecordEntries)
return NS_ERROR_FAILURE;
and we return an error from CheckForTooManyEntries. At this stage, we stop using
the cache, since GetCahedNetData returns an error.
should be fixed for rtm.
Whiteboard: [nsbeta3-] → [nsbeta3-][rtm need info]
Comment 8•25 years ago
|
||
(sr=rpotts)
This looks good :-)
Assignee | ||
Comment 10•25 years ago
|
||
Checked in a fix for branch and trunk.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 11•25 years ago
|
||
verified on branch:
winNT 101608
Linux rh9 101609
mac os9 101608
need to test on trunk
Keywords: vtrunk
Comment 12•25 years ago
|
||
verified on trunk builds...
Oct. 19 Windows NT
Oct. 19 Linux RH7
Oct. 23 Mac OS9
Marking this verified and removing vtrunk keyword
Status: RESOLVED → VERIFIED
Keywords: vtrunk
You need to log in
before you can comment on or make changes to this bug.
Description
•