fix for rtm++ bug 54630 - Disk cache not writing files after 512 files reached. r=dp, sr=rpotts